# hardware_report

./: .envrc  .gitignore  Cargo.toml  MYQQGPTJ6J_hardware_report.json  MYQQGPTJ6J_hardware_report.toml  MYQQGPTJ6J_new_architecture_report.json  MYQQGPTJ6J_new_architecture_report.toml  Makefile  NOTICE  README.md  Readme.md  Unknown_S_N_hardware_report.toml  flake.nix  nix-build-examples.md  release.yml  result  test.yml
.direnv/: flake-profile-a5d5b61aa8a61b7d9d765e1daf971a9a578f1cfa  flake-profile-a5d5b61aa8a61b7d9d765e1daf971a9a578f1cfa.rc
.direnv/flake-inputs/: 66s1gxivwqgr1n5kzw260mvxxv14l3fj-source  gim4sdpq0h6c8cnfnrmb8mi75fw73vdk-source  nfqw3h3qc2mq37v6amw80b1rpi0g9x61-source
.github/workflows/: nix-release.yml  nix-release.yml.disabled  nix-test.yml  nix-test.yml.disabled  release.yml  test.yml
docs/: API.md  ARCHITECTURE.md  CPU_ENHANCEMENTS.md  DEPLOYMENT.md  ENHANCEMENTS.md  GPU_DETECTION.md  IMPLEMENTATION_GUIDE.md  INSTALLATION.md  LINUX_ADAPTER_IMPLEMENTATION.md  MEMORY_ENHANCEMENTS.md  NETWORK_ENHANCEMENTS.md  RUSTDOC_STANDARDS.md  STORAGE_DETECTION.md  TESTING_STRATEGY.md
examples/: basic_usage.rs  custom_analysis.rs  library_usage.rs  new_architecture_demo.rs
src/: container.rs  lib.rs  main.rs  netbox.rs  posting.rs
src/adapters/: mod.rs
src/adapters/primary/: mod.rs
src/adapters/secondary/: mod.rs
src/adapters/secondary/command/: mod.rs  unix.rs
src/adapters/secondary/publisher/: file.rs  http.rs  mod.rs
src/adapters/secondary/system/: linux.rs  macos.rs  mod.rs
src/domain/: entities.rs  errors.rs  legacy_compat.rs  mod.rs
src/domain/parsers/: common.rs  cpu.rs  gpu.rs  memory.rs  mod.rs  network.rs  storage.rs  system.rs
src/domain/services/: hardware_collection.rs  mod.rs
src/ports/: mod.rs
src/ports/primary/: mod.rs  reporting.rs
src/ports/secondary/: command.rs  config.rs  mod.rs  publisher.rs  system.rs
