[package]
name = "hardware_report"
version = "0.1.7"
edition = "2021"
authors = ["Kenny Sheridan"]
description = "A tool for generating hardware information reports"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1.5"
tonic = "0.10"
reqwest = { version = "0.11", default-features = false, features = [
    "json",
    "rustls-tls",
] }
structopt = "0.3"
sysinfo = "0.32.1" # For system information gathering
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0" # For JSON output
clap = { version = "4.5", features = [
    "derive",
] } # For command line argument parsing
thiserror = "1.0" # For error handling
log = "0.4" # For logging
env_logger = "0.11.8" # For logging implementation
regex = "1.12.2"
toml = "0.8.23"
libc = "0.2.179"
tokio = { version = "1.49", features = ["full"] }
async-trait = "0.1"
# Requires Nvidia driver at runtime
nvml-wrapper = { version = "0.11.0", optional = true }

# Only compiled on x86/x86_64 targets
[target.'cfg(any(target_arch = "x86", target_arch = "x86_64"))'.dependencies]
raw-cpuid = { version = "11", optional = true }

[features]
default = []
nvidia = ["nvml-wrapper"]
x86-cpu = ["raw-cpuid"]
full = ["nvidia", "x86-cpu"]

[dev-dependencies]
tempfile = "3.24"   # For temporary file handling in tests
assert_fs = "1.1"  # For filesystem assertions in tests
predicates = "3.1" # For test assertions

[profile.release]
opt-level = 3     # Maximum optimization
lto = true        # Enable link-time optimization
codegen-units = 1 # Maximize performance
strip = true      # Strip symbols from binary

# Hybrid configuration for library and binary
[lib]
name = "hardware_report" # Optional, defaults to the package name
path = "src/lib.rs"      # Path to the library file

[[bin]]
name = "hardware_report"            # Name of the binary
path = "src/bin/hardware_report.rs" # Path to the binary's main.rs
